Refactor codes, change dto input output system